添加用户头像的后端api
